--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-mlb-statsapi
-psycopg2-binary
-MLB-StatsAPI==1.6.1
-pybaseball==2.2.4
-pandas>=1.5.0
-numpy>=1.21.0
 selenium
+webdriver-manager
+psycopg2-binary
